<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <cn.appoa.afimage.cropper.CropImageView
        android:id="@+id/cropImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/padding_big"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/crop_image_menu_rotate_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/crop_image_menu_rotate_left"
            android:padding="@dimen/padding_normal"
            android:src="@drawable/crop_image_menu_rotate_left"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/crop_image_menu_flip_horizontally"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/crop_image_menu_flip_horizontally"
            android:padding="@dimen/padding_normal"
            android:src="@drawable/crop_image_menu_flip_horizontally"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/crop_image_menu_flip_vertically"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/crop_image_menu_flip_vertically"
            android:padding="@dimen/padding_normal"
            android:src="@drawable/crop_image_menu_flip_vertically"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/crop_image_menu_rotate_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/crop_image_menu_rotate_right"
            android:padding="@dimen/padding_normal"
            android:src="@drawable/crop_image_menu_rotate_right"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/padding_huge"
        android:background="@drawable/crop_image_button_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancelView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_big"
            android:text="@string/crop_image_cancel"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/confirmView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_big"
            android:text="@string/crop_image_confirm"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="@dimen/height_divider"
            android:layout_height="match_parent"
            android:background="@android:color/white" />
    </LinearLayout>

</RelativeLayout>